<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:orientation="vertical"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_close"
                android:layout_alignParentRight="true"
                android:padding="@dimen/activity_vertical_margin"
                android:id="@+id/close"
                />
    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_pw"
                android:id="@+id/dialog_title"
                style="@style/Dialog.Title"
                android:gravity="center_horizontal"
                />

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Dialog.Input"
                android:id="@+id/phone"
                tools:text="你的手机号为：15919496914"
                android:gravity="center_horizontal"
                />

        <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pls_input_pw"
                style="@style/Dialog.Input"
                android:id="@+id/pw"
                android:inputType="textPassword"
                android:textColor="@color/color_text_normal"
                />

        <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pls_input_pw_again"
                style="@style/Dialog.Input"
                android:id="@+id/pw1"
                android:inputType="textPassword"
                android:textColor="@color/color_text_normal"
                />

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loading"
                android:layout_gravity="center_horizontal"
                style="@style/Loading"
                android:visibility="gone"
                />

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="错误"
                android:gravity="center"
                android:textColor="@color/error_red"
                android:id="@+id/tips"
                android:visibility="gone"
                android:padding="12dp"
                style="@style/Tips"
                />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            style="@style/Dialog.Button"
            android:id="@+id/btn_confirm"
            />

</android.support.v7.widget.LinearLayoutCompat>