<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:orientation="vertical"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
        >
    <!--头部-->
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_close"
                android:layout_alignParentRight="true"
                android:padding="@dimen/activity_vertical_margin"
                android:id="@+id/close"
                />
    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/dialog_title"
                style="@style/Dialog.Title"
                android:gravity="center_horizontal"

                />

        <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_text_normal"
                    android:text="+86"
                    />

            <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pls_input_phone"
                    style="@style/Dialog.Input"
                    android:id="@+id/phone"
                    android:inputType="phone"
                    android:textColor="@color/color_text_normal"
                    />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            style="@style/Dialog.Button"
            android:id="@+id/btn_next"
            />

</android.support.v7.widget.LinearLayoutCompat>